--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ canvas {
 
 #sub {
 	background-color: rgba(0, 0, 0, 0.2);
+	-webkit-backdrop-filter: saturate(160%) blur(30px);
 	backdrop-filter: saturate(160%) blur(30px);
 	bottom: 0;
 	height: 40px;
